--- a/assignment2/FullyConnectedNets.ipynb
+++ b/assignment2/FullyConnectedNets.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:24:07.239279Z",
+     "start_time": "2023-09-24T10:24:07.112972Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/roark/Documents/Assignments/cs231n spring2023/assignment2/cs231n/datasets\n",
+      "/home/roark/Documents/Assignments/cs231n spring2023/assignment2\n"
+     ]
+    }
+   ],
    "source": [
     "# This mounts your Google Drive to the Colab VM.\n",
     "# from google.colab import drive\n",
@@ -12,7 +26,7 @@
     "\n",
     "# TODO: Enter the foldername in your Drive where you have saved the unzipped\n",
     "# assignment folder, e.g. 'cs231n/assignments/assignment1/'\n",
-    "FOLDERNAME = '/home/roark/Documents/Assignments/cs231n\\ spring2023/assignment1'\n",
+    "FOLDERNAME = '/home/roark/Documents/Assignments/cs231n\\ spring2023/assignment2'\n",
     "assert FOLDERNAME is not None, \"[!] Enter the foldername.\"\n",
     "\n",
     "# Now that we've mounted your Drive, this ensures that\n",
@@ -51,13 +65,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:24:10.021556Z",
+     "start_time": "2023-09-24T10:24:09.992330Z"
+    },
     "tags": [
      "pdf-ignore"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Setup cell.\n",
     "import time\n",
@@ -83,9 +110,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:24:14.564293Z",
+     "start_time": "2023-09-24T10:24:13.085878Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train: (49000, 3, 32, 32)\n",
+      "y_train: (49000,)\n",
+      "X_val: (1000, 3, 32, 32)\n",
+      "y_val: (1000,)\n",
+      "X_test: (1000, 3, 32, 32)\n",
+      "y_test: (1000,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the (preprocessed) CIFAR-10 data.\n",
     "data = get_CIFAR10_data()\n",
@@ -106,9 +151,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:25:09.224882Z",
+     "start_time": "2023-09-24T10:25:09.212974Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running check with reg =  0\n",
+      "Initial loss:  0.0\n",
+      "Running check with reg =  3.14\n",
+      "Initial loss:  0.0\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "N, D, H1, H2, C = 2, 15, 20, 30, 10\n",
@@ -149,6 +210,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:21:32.888745Z",
+     "start_time": "2023-09-24T10:21:32.888735Z"
+    },
     "scrolled": false
    },
    "outputs": [],
@@ -200,7 +265,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:21:32.889345Z",
+     "start_time": "2023-09-24T10:21:32.889336Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# TODO: Use a five-layer Net to overfit 50 training examples by \n",
@@ -276,7 +346,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:21:32.890011Z",
+     "start_time": "2023-09-24T10:21:32.890002Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from cs231n.optim import sgd_momentum\n",
@@ -316,6 +391,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:21:32.890683Z",
+     "start_time": "2023-09-24T10:21:32.890673Z"
+    },
     "scrolled": false
    },
    "outputs": [],
@@ -389,7 +468,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:21:32.891448Z",
+     "start_time": "2023-09-24T10:21:32.891439Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Test RMSProp implementation\n",
@@ -422,7 +506,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:21:32.891982Z",
+     "start_time": "2023-09-24T10:21:32.891973Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Test Adam implementation\n",
@@ -470,6 +559,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:21:32.892648Z",
+     "start_time": "2023-09-24T10:21:32.892638Z"
+    },
     "scrolled": false
    },
    "outputs": [],
@@ -555,6 +648,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:21:32.893309Z",
+     "start_time": "2023-09-24T10:21:32.893300Z"
+    },
     "scrolled": false
    },
    "outputs": [],
@@ -587,7 +684,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-24T10:21:32.894037Z",
+     "start_time": "2023-09-24T10:21:32.894028Z"
+    }
+   },
    "outputs": [],
    "source": [
     "y_test_pred = np.argmax(best_model.loss(data['X_test']), axis=1)\n",
