--- a/assignment2/BatchNormalization.ipynb
+++ b/assignment2/BatchNormalization.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:19:28.316345Z",
-     "start_time": "2023-10-03T15:19:28.186899Z"
+     "end_time": "2023-10-04T16:34:51.358373Z",
+     "start_time": "2023-10-04T16:34:51.228388Z"
     }
    },
    "outputs": [
@@ -72,8 +72,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:19:28.691596Z",
-     "start_time": "2023-10-03T15:19:28.319750Z"
+     "end_time": "2023-10-04T16:34:51.738721Z",
+     "start_time": "2023-10-04T16:34:51.361698Z"
     },
     "tags": [
      "pdf-ignore"
@@ -122,8 +122,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:19:30.119403Z",
-     "start_time": "2023-10-03T15:19:28.692857Z"
+     "end_time": "2023-10-04T16:34:52.766988Z",
+     "start_time": "2023-10-04T16:34:51.740598Z"
     },
     "tags": [
      "pdf-ignore"
@@ -165,8 +165,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:19:30.151419Z",
-     "start_time": "2023-10-03T15:19:30.121265Z"
+     "end_time": "2023-10-04T16:34:52.799995Z",
+     "start_time": "2023-10-04T16:34:52.769033Z"
     }
    },
    "outputs": [
@@ -226,8 +226,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:19:30.214851Z",
-     "start_time": "2023-10-03T15:19:30.152365Z"
+     "end_time": "2023-10-04T16:34:52.846665Z",
+     "start_time": "2023-10-04T16:34:52.802203Z"
     }
    },
    "outputs": [
@@ -290,8 +290,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:19:30.228656Z",
-     "start_time": "2023-10-03T15:19:30.216106Z"
+     "end_time": "2023-10-04T16:34:52.862374Z",
+     "start_time": "2023-10-04T16:34:52.848437Z"
     }
    },
    "outputs": [
@@ -388,8 +388,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:19:30.242951Z",
-     "start_time": "2023-10-03T15:19:30.229802Z"
+     "end_time": "2023-10-04T16:34:52.876954Z",
+     "start_time": "2023-10-04T16:34:52.864387Z"
     }
    },
    "outputs": [
@@ -400,7 +400,7 @@
       "dx difference:  1.1767832870317176e-13\n",
       "dgamma difference:  0.0\n",
       "dbeta difference:  0.0\n",
-      "speedup: 1.20x\n"
+      "speedup: 1.19x\n"
      ]
     }
    ],
@@ -444,8 +444,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:19:32.459699Z",
-     "start_time": "2023-10-03T15:19:30.244231Z"
+     "end_time": "2023-10-04T16:34:55.158549Z",
+     "start_time": "2023-10-04T16:34:52.878491Z"
     }
    },
    "outputs": [
@@ -519,8 +519,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:19:37.654221Z",
-     "start_time": "2023-10-03T15:19:32.460962Z"
+     "end_time": "2023-10-04T16:34:59.302204Z",
+     "start_time": "2023-10-04T16:34:55.160358Z"
     }
    },
    "outputs": [
@@ -627,8 +627,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:19:38.084882Z",
-     "start_time": "2023-10-03T15:19:37.656763Z"
+     "end_time": "2023-10-04T16:34:59.783342Z",
+     "start_time": "2023-10-04T16:34:59.305979Z"
     },
     "tags": [
      "pdf-ignore-input"
@@ -695,8 +695,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:20:47.506342Z",
-     "start_time": "2023-10-03T15:19:38.085961Z"
+     "end_time": "2023-10-04T16:35:59.385856Z",
+     "start_time": "2023-10-04T16:34:59.784690Z"
     },
     "tags": [
      "pdf-ignore-input"
@@ -777,8 +777,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:20:48.467220Z",
-     "start_time": "2023-10-03T15:20:47.508319Z"
+     "end_time": "2023-10-04T16:36:00.320681Z",
+     "start_time": "2023-10-04T16:35:59.387845Z"
     },
     "tags": [
      "pdf-ignore-input"
@@ -871,25 +871,14 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:21:29.866646Z",
-     "start_time": "2023-10-03T15:20:48.469082Z"
+     "end_time": "2023-10-04T16:36:00.334701Z",
+     "start_time": "2023-10-04T16:36:00.322623Z"
     },
     "tags": [
      "pdf-ignore-input"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No normalization: batch size =  5\n",
-      "Normalization: batch size =  5\n",
-      "Normalization: batch size =  10\n",
-      "Normalization: batch size =  50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def run_batchsize_experiments(normalization_mode):\n",
     "    np.random.seed(231)\n",
@@ -937,8 +926,7 @@
     "        \n",
     "    return bn_solvers, solver, batch_sizes\n",
     "\n",
-    "batch_sizes = [5,10,50]\n",
-    "bn_solvers_bsize, solver_bsize, batch_sizes = run_batchsize_experiments('batchnorm')"
+    "batch_sizes = [5,10,50]"
    ]
   },
   {
@@ -946,9 +934,35 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:21:30.180516Z",
-     "start_time": "2023-10-03T15:21:29.868493Z"
+     "end_time": "2023-10-04T16:36:34.530438Z",
+     "start_time": "2023-10-04T16:36:00.336387Z"
     }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No normalization: batch size =  5\n",
+      "Normalization: batch size =  5\n",
+      "Normalization: batch size =  10\n",
+      "Normalization: batch size =  50\n"
+     ]
+    }
+   ],
+   "source": [
+    "bn_solvers_bsize, solver_bsize, batch_sizes = run_batchsize_experiments('batchnorm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-04T16:36:34.845521Z",
+     "start_time": "2023-10-04T16:36:34.532734Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -986,7 +1000,14 @@
     "Describe the results of this experiment. What does this imply about the relationship between batch normalization and batch size? Why is this relationship observed?\n",
     "\n",
     "## Answer:\n",
-    "[FILL THIS IN]\n"
+    "1.batchsize较小的时候，batchnorm不仅不提升，反而降低training accuracy。batchsize越大，training accuracy越高。随着batchsize打到一定数量后，做batchnorm的training accuracy也能达到不做batchnorm的模型水平。\\\n",
+    "分析：其他条件相同的情况下，做batchnorm相当于增加了Regularization，使模型更不容易发生overfit，而且，batchsize越小，由于抽样带来的noise越大，Regularization strength也越大。所以当batchsize仅仅为5的时候，不用batchnorm会发生overfit，而用了batchnorm则不会。随着batchsize增加，Regularization strength下降，training accuracy就会增加。\n",
+    "    \n",
+    "2.做了batchnorm的模型中，batchsize越大，validation accuracy和training accuracy提升的速度更快。\\\n",
+    "分析：batchsize越大，batch mean和batch variance值的波动更小，并且更能体现数据本身的真实的统计特征。This leads to more accurate normalization.从而使batchnorm的效果更好。\n",
+    "\n",
+    "3.做了batchnorm的模型中，当训练达到一定epoch之后，不同的batchsize对应的best validation accuracy区别不大。\\\n",
+    "分析：当迭代epoch数量足够多了之后，即使batchsize不同，但running average of mean and variance的值趋于一致，从而使得validation的结果和training不同，后者的accuracy会趋于一致。"
    ]
   },
   {
@@ -1044,11 +1065,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:21:30.646047Z",
-     "start_time": "2023-10-03T15:21:30.182112Z"
+     "end_time": "2023-10-04T16:36:34.861774Z",
+     "start_time": "2023-10-04T16:36:34.847415Z"
     }
    },
    "outputs": [
@@ -1060,19 +1081,14 @@
       "  means: [-59.06673243 -47.60782686 -43.31137368 -26.40991744]\n",
       "  stds:  [10.07429373 28.39478981 35.28360729  4.01831507]\n",
       "\n",
-      "After layer normalization (gamma=1, beta=0)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'mean'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAfter layer normalization (gamma=1, beta=0)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     20\u001b[0m a_norm, _ \u001b[38;5;241m=\u001b[39m layernorm_forward(a, gamma, beta, {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmode\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m})\n\u001b[0;32m---> 21\u001b[0m \u001b[43mprint_mean_std\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma_norm\u001b[49m\u001b[43m,\u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     23\u001b[0m gamma \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray([\u001b[38;5;241m3.0\u001b[39m,\u001b[38;5;241m3.0\u001b[39m,\u001b[38;5;241m3.0\u001b[39m])\n\u001b[1;32m     24\u001b[0m beta \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39masarray([\u001b[38;5;241m5.0\u001b[39m,\u001b[38;5;241m5.0\u001b[39m,\u001b[38;5;241m5.0\u001b[39m])\n",
-      "Cell \u001b[0;32mIn[2], line 23\u001b[0m, in \u001b[0;36mprint_mean_std\u001b[0;34m(x, axis)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mprint_mean_std\u001b[39m(x,axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[0;32m---> 23\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  means: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;241m.\u001b[39mmean(axis\u001b[38;5;241m=\u001b[39maxis)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  stds:  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx\u001b[38;5;241m.\u001b[39mstd(axis\u001b[38;5;241m=\u001b[39maxis)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'mean'"
+      "After layer normalization (gamma=1, beta=0)\n",
+      "  means: [ 7.40148683e-16 -7.40148683e-17  0.00000000e+00  2.96059473e-16]\n",
+      "  stds:  [0.99999995 0.99999999 1.         0.99999969]\n",
+      "\n",
+      "After layer normalization (gamma= [3. 3. 3.] , beta= [5. 5. 5.] )\n",
+      "  means: [5. 5. 5. 5.]\n",
+      "  stds:  [2.99999985 2.99999998 2.99999999 2.99999907]\n",
+      "\n"
      ]
     }
    ],
@@ -1110,14 +1126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:21:30.647571Z",
-     "start_time": "2023-10-03T15:21:30.647561Z"
+     "end_time": "2023-10-04T16:36:34.878347Z",
+     "start_time": "2023-10-04T16:36:34.863640Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  1.4336158494902849e-09\n",
+      "dgamma error:  4.519489546032799e-12\n",
+      "dbeta error:  2.276445013433725e-12\n"
+     ]
+    }
+   ],
    "source": [
     "# Gradient check batchnorm backward pass.\n",
     "np.random.seed(231)\n",
@@ -1159,11 +1185,19 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T15:21:30.648526Z",
-     "start_time": "2023-10-03T15:21:30.648516Z"
+     "start_time": "2023-10-04T16:34:51.267Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No normalization: batch size =  5\n",
+      "Normalization: batch size =  5\n"
+     ]
+    }
+   ],
    "source": [
     "ln_solvers_bsize, solver_bsize, batch_sizes = run_batchsize_experiments('layernorm')\n",
     "\n",
