implemented convolutional layer

--- a/assignment1/two_layer_net.ipynb
+++ b/assignment1/two_layer_net.ipynb
@@ -6,8 +6,8 @@
    "id": "d6917607",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:13:07.894934Z",
-     "start_time": "2023-10-03T05:13:07.772624Z"
+     "end_time": "2023-10-05T06:47:25.364005Z",
+     "start_time": "2023-10-05T06:47:25.219879Z"
     }
    },
    "outputs": [
@@ -100,8 +100,8 @@
    "id": "61277b4e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:13:08.361847Z",
-     "start_time": "2023-10-03T05:13:07.897758Z"
+     "end_time": "2023-10-05T06:47:25.792267Z",
+     "start_time": "2023-10-05T06:47:25.367210Z"
     },
     "tags": [
      "pdf-ignore"
@@ -140,8 +140,8 @@
    "id": "027b175b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:13:09.607717Z",
-     "start_time": "2023-10-03T05:13:08.363703Z"
+     "end_time": "2023-10-05T06:47:26.950279Z",
+     "start_time": "2023-10-05T06:47:25.793956Z"
     },
     "tags": [
      "pdf-ignore"
@@ -186,8 +186,8 @@
    "id": "6d6ebb55",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:13:09.721768Z",
-     "start_time": "2023-10-03T05:13:09.610036Z"
+     "end_time": "2023-10-05T06:47:26.987327Z",
+     "start_time": "2023-10-05T06:47:26.952364Z"
     }
    },
    "outputs": [
@@ -238,8 +238,8 @@
    "id": "3fb353c4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:13:09.782686Z",
-     "start_time": "2023-10-03T05:13:09.723227Z"
+     "end_time": "2023-10-05T06:47:27.010701Z",
+     "start_time": "2023-10-05T06:47:26.989142Z"
     }
    },
    "outputs": [
@@ -291,8 +291,8 @@
    "id": "18e3dd7c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:13:09.815454Z",
-     "start_time": "2023-10-03T05:13:09.784348Z"
+     "end_time": "2023-10-05T06:47:27.026562Z",
+     "start_time": "2023-10-05T06:47:27.013136Z"
     }
    },
    "outputs": [
@@ -335,8 +335,8 @@
    "id": "e6284cdb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:13:09.860345Z",
-     "start_time": "2023-10-03T05:13:09.816866Z"
+     "end_time": "2023-10-05T06:47:27.039956Z",
+     "start_time": "2023-10-05T06:47:27.028015Z"
     }
    },
    "outputs": [
@@ -401,8 +401,8 @@
    "id": "b0504451",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:13:09.899281Z",
-     "start_time": "2023-10-03T05:13:09.861847Z"
+     "end_time": "2023-10-05T06:47:27.057091Z",
+     "start_time": "2023-10-05T06:47:27.041883Z"
     }
    },
    "outputs": [
@@ -456,8 +456,8 @@
    "id": "b6292618",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:13:10.062695Z",
-     "start_time": "2023-10-03T05:13:09.901175Z"
+     "end_time": "2023-10-05T06:47:27.184481Z",
+     "start_time": "2023-10-05T06:47:27.058495Z"
     }
    },
    "outputs": [
@@ -513,8 +513,8 @@
    "id": "d0e15edc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:13:15.795456Z",
-     "start_time": "2023-10-03T05:13:10.066488Z"
+     "end_time": "2023-10-05T06:47:27.661092Z",
+     "start_time": "2023-10-05T06:47:27.187228Z"
     }
    },
    "outputs": [
@@ -609,8 +609,8 @@
    "id": "9063768c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:17:36.139542Z",
-     "start_time": "2023-10-03T05:13:15.801749Z"
+     "end_time": "2023-10-05T06:48:51.372347Z",
+     "start_time": "2023-10-05T06:47:27.662528Z"
     }
    },
    "outputs": [
@@ -814,8 +814,8 @@
    "id": "587a99cb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:17:36.550074Z",
-     "start_time": "2023-10-03T05:17:36.141867Z"
+     "end_time": "2023-10-05T06:48:51.744821Z",
+     "start_time": "2023-10-05T06:48:51.374094Z"
     }
    },
    "outputs": [
@@ -855,8 +855,8 @@
    "id": "1df39d72",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:17:36.687652Z",
-     "start_time": "2023-10-03T05:17:36.551472Z"
+     "end_time": "2023-10-05T06:48:51.855648Z",
+     "start_time": "2023-10-05T06:48:51.745911Z"
     }
    },
    "outputs": [
@@ -887,6 +887,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "339f4161",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-05T06:55:08.314622Z",
+     "start_time": "2023-10-05T06:55:07.837681Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 500 into shape (3,32,32,newaxis)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m     plt\u001b[38;5;241m.\u001b[39mgca()\u001b[38;5;241m.\u001b[39maxis(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moff\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m     plt\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m----> 8\u001b[0m \u001b[43mshow_net_weights\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[17], line 3\u001b[0m, in \u001b[0;36mshow_net_weights\u001b[0;34m(net)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mshow_net_weights\u001b[39m(net):\n\u001b[1;32m      2\u001b[0m     W1 \u001b[38;5;241m=\u001b[39m net\u001b[38;5;241m.\u001b[39mparams[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mW2\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m     W1 \u001b[38;5;241m=\u001b[39m \u001b[43mW1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mtranspose(\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      4\u001b[0m     plt\u001b[38;5;241m.\u001b[39mimshow(visualize_grid(W1, padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m)\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124muint8\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m      5\u001b[0m     plt\u001b[38;5;241m.\u001b[39mgca()\u001b[38;5;241m.\u001b[39maxis(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moff\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 500 into shape (3,32,32,newaxis)"
+     ]
+    }
+   ],
+   "source": [
+    "def show_net_weights(net):\n",
+    "    W2 = net.params['W2']\n",
+    "    W2 = W2.reshape(3, 32, 32, -1).transpose(3, 1, 2, 0)\n",
+    "    plt.imshow(visualize_grid(W2, padding=3).astype('uint8'))\n",
+    "    plt.gca().axis('off')\n",
+    "    plt.show()\n",
+    "\n",
+    "show_net_weights(model)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "367c9e24",
    "metadata": {},
@@ -908,8 +943,8 @@
    "id": "1d1f87fa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:31:31.228977Z",
-     "start_time": "2023-10-03T05:17:36.689316Z"
+     "end_time": "2023-10-05T06:55:07.793575Z",
+     "start_time": "2023-10-05T06:48:51.856855Z"
     },
     "scrolled": false
    },
@@ -918,8 +953,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new best: learn rate=0.0001, reg=0, val acc=0.5\n",
-      "new best: learn rate=0.001, reg=0, val acc=0.533\n"
+      "new best: learn rate=0.0001, reg=0.0001, val acc=0.503\n",
+      "new best: learn rate=0.001, reg=0.0001, val acc=0.53\n"
      ]
     },
     {
@@ -934,14 +969,6 @@
       "  adj_x = x - np.max(x, axis=1).reshape(-1, 1)\n",
       "/home/roark/Documents/Assignments/cs231n spring2023/assignment1/cs231n/layers.py:821: RuntimeWarning: invalid value encountered in subtract\n",
       "  adj_x = x - np.max(x, axis=1).reshape(-1, 1)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "new best: learn rate=0.001, reg=0.0001, val acc=0.535\n",
-      "new best: learn rate=0.001, reg=1e-08, val acc=0.536\n"
      ]
     }
    ],
@@ -1007,8 +1034,8 @@
    "id": "99fe8390",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:31:31.258229Z",
-     "start_time": "2023-10-03T05:31:31.231403Z"
+     "end_time": "2023-10-05T06:55:07.818924Z",
+     "start_time": "2023-10-05T06:55:07.796578Z"
     },
     "test": "val_accuracy"
    },
@@ -1017,7 +1044,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation set accuracy:  0.536\n"
+      "Validation set accuracy:  0.53\n"
      ]
     }
    ],
@@ -1032,8 +1059,8 @@
    "id": "1b427b1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-03T05:31:31.288419Z",
-     "start_time": "2023-10-03T05:31:31.259974Z"
+     "end_time": "2023-10-05T06:55:07.835402Z",
+     "start_time": "2023-10-05T06:55:07.820365Z"
     },
     "test": "test_accuracy"
    },
@@ -1042,7 +1069,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set accuracy:  0.504\n"
+      "Test set accuracy:  0.506\n"
      ]
     }
    ],
