--- a/assignment2/ConvolutionalNetworks.ipynb
+++ b/assignment2/ConvolutionalNetworks.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:44.861419Z",
-     "start_time": "2023-10-06T15:43:44.725647Z"
+     "end_time": "2023-10-08T03:00:03.500298Z",
+     "start_time": "2023-10-08T03:00:03.359613Z"
     }
    },
    "outputs": [
@@ -66,8 +66,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:45.270291Z",
-     "start_time": "2023-10-06T15:43:44.865209Z"
+     "end_time": "2023-10-08T03:00:03.907449Z",
+     "start_time": "2023-10-08T03:00:03.503712Z"
     },
     "tags": [
      "pdf-ignore"
@@ -105,8 +105,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:46.387680Z",
-     "start_time": "2023-10-06T15:43:45.272114Z"
+     "end_time": "2023-10-08T03:00:05.039114Z",
+     "start_time": "2023-10-08T03:00:03.909094Z"
     },
     "tags": [
      "pdf-ignore"
@@ -150,8 +150,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:46.415559Z",
-     "start_time": "2023-10-06T15:43:46.390252Z"
+     "end_time": "2023-10-08T03:00:05.072754Z",
+     "start_time": "2023-10-08T03:00:05.041167Z"
     }
    },
    "outputs": [
@@ -205,8 +205,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:47.561189Z",
-     "start_time": "2023-10-06T15:43:46.417776Z"
+     "end_time": "2023-10-08T03:00:06.122050Z",
+     "start_time": "2023-10-08T03:00:05.074131Z"
     },
     "tags": [
      "pdf-ignore-input"
@@ -217,9 +217,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_20508/3128955772.py:4: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "/tmp/ipykernel_21762/3128955772.py:4: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
       "  kitten = imread('cs231n/notebook_images/kitten.jpg')\n",
-      "/tmp/ipykernel_20508/3128955772.py:5: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "/tmp/ipykernel_21762/3128955772.py:5: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
       "  puppy = imread('cs231n/notebook_images/puppy.jpg')\n"
      ]
     },
@@ -314,8 +314,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:47.927467Z",
-     "start_time": "2023-10-06T15:43:47.562610Z"
+     "end_time": "2023-10-08T03:00:06.473959Z",
+     "start_time": "2023-10-08T03:00:06.123234Z"
     }
    },
    "outputs": [
@@ -367,8 +367,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:47.940064Z",
-     "start_time": "2023-10-06T15:43:47.928664Z"
+     "end_time": "2023-10-08T03:00:06.485917Z",
+     "start_time": "2023-10-08T03:00:06.475104Z"
     }
    },
    "outputs": [
@@ -421,8 +421,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:48.020805Z",
-     "start_time": "2023-10-06T15:43:47.941084Z"
+     "end_time": "2023-10-08T03:00:06.566520Z",
+     "start_time": "2023-10-08T03:00:06.487133Z"
     }
    },
    "outputs": [
@@ -468,8 +468,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:48.547648Z",
-     "start_time": "2023-10-06T15:43:48.021839Z"
+     "end_time": "2023-10-08T03:00:07.089162Z",
+     "start_time": "2023-10-08T03:00:06.567669Z"
     }
    },
    "outputs": [
@@ -505,8 +505,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:48.712711Z",
-     "start_time": "2023-10-06T15:43:48.551130Z"
+     "end_time": "2023-10-08T03:00:07.236830Z",
+     "start_time": "2023-10-08T03:00:07.092232Z"
     },
     "scrolled": true
    },
@@ -516,15 +516,15 @@
      "output_type": "stream",
      "text": [
       "Testing conv_forward_fast:\n",
-      "Naive: 0.016811s\n",
-      "Fast: 0.007928s\n",
-      "Speedup: 2.120444x\n",
+      "Naive: 0.014464s\n",
+      "Fast: 0.008508s\n",
+      "Speedup: 1.700118x\n",
       "Difference:  2.576506161730593e-12\n",
       "\n",
       "Testing conv_backward_fast:\n",
-      "Naive: 0.072386s\n",
-      "Fast: 0.004685s\n",
-      "Speedup: 15.450891x\n",
+      "Naive: 0.072099s\n",
+      "Fast: 0.004962s\n",
+      "Speedup: 14.529621x\n",
       "dx difference:  1.006330206620509e-11\n",
       "dw difference:  5.61594157319212e-13\n",
       "db difference:  0.0\n"
@@ -574,8 +574,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:48.767457Z",
-     "start_time": "2023-10-06T15:43:48.714020Z"
+     "end_time": "2023-10-08T03:00:07.290430Z",
+     "start_time": "2023-10-08T03:00:07.238036Z"
     }
    },
    "outputs": [
@@ -584,15 +584,15 @@
      "output_type": "stream",
      "text": [
       "Testing pool_forward_fast:\n",
-      "Naive: 0.006427s\n",
-      "fast: 0.003258s\n",
-      "speedup: 1.972631x\n",
+      "Naive: 0.006305s\n",
+      "fast: 0.003232s\n",
+      "speedup: 1.951014x\n",
       "difference:  0.0\n",
       "\n",
       "Testing pool_backward_fast:\n",
-      "Naive: 0.012002s\n",
-      "fast: 0.008537s\n",
-      "speedup: 1.405882x\n",
+      "Naive: 0.011300s\n",
+      "fast: 0.008411s\n",
+      "speedup: 1.343367x\n",
       "dx difference:  0.0\n"
      ]
     }
@@ -643,8 +643,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:49.432393Z",
-     "start_time": "2023-10-06T15:43:48.768766Z"
+     "end_time": "2023-10-08T03:00:07.931595Z",
+     "start_time": "2023-10-08T03:00:07.291614Z"
     }
    },
    "outputs": [
@@ -688,8 +688,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:49.559493Z",
-     "start_time": "2023-10-06T15:43:49.434304Z"
+     "end_time": "2023-10-08T03:00:08.055987Z",
+     "start_time": "2023-10-08T03:00:07.932775Z"
     }
    },
    "outputs": [
@@ -747,11 +747,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:44:47.075864Z",
-     "start_time": "2023-10-06T15:44:46.716917Z"
+     "end_time": "2023-10-08T03:00:08.390269Z",
+     "start_time": "2023-10-08T03:00:08.057332Z"
     }
    },
    "outputs": [
@@ -759,8 +759,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial loss (no regularization):  2.3025866307145475\n",
-      "Initial loss (with regularization):  2.509054065478456\n"
+      "Initial loss (no regularization):  2.302586071243988\n",
+      "Initial loss (with regularization):  2.508255638232933\n"
      ]
     }
    ],
@@ -789,11 +789,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:45:00.038334Z",
-     "start_time": "2023-10-06T15:44:57.921475Z"
+     "end_time": "2023-10-08T03:00:10.067012Z",
+     "start_time": "2023-10-08T03:00:08.391464Z"
     }
    },
    "outputs": [
@@ -846,11 +846,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:47:00.337314Z",
-     "start_time": "2023-10-06T15:46:40.203340Z"
+     "end_time": "2023-10-08T03:00:30.197853Z",
+     "start_time": "2023-10-08T03:00:10.068216Z"
     }
    },
    "outputs": [
@@ -935,11 +935,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:47:13.200978Z",
-     "start_time": "2023-10-06T15:47:13.087774Z"
+     "end_time": "2023-10-08T03:00:30.312419Z",
+     "start_time": "2023-10-08T03:00:30.199536Z"
     },
     "test": "small_data_train_accuracy"
    },
@@ -962,11 +962,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:47:16.396357Z",
-     "start_time": "2023-10-06T15:47:15.540722Z"
+     "end_time": "2023-10-08T03:00:31.191491Z",
+     "start_time": "2023-10-08T03:00:30.313633Z"
     },
     "test": "small_data_validation_accuracy"
    },
@@ -996,11 +996,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:47:27.460242Z",
-     "start_time": "2023-10-06T15:47:27.220073Z"
+     "end_time": "2023-10-08T03:00:31.408024Z",
+     "start_time": "2023-10-08T03:00:31.192660Z"
     }
    },
    "outputs": [
@@ -1040,11 +1040,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:50:59.969124Z",
-     "start_time": "2023-10-06T15:47:33.325080Z"
+     "end_time": "2023-10-08T03:03:57.821088Z",
+     "start_time": "2023-10-08T03:00:31.409452Z"
     },
     "scrolled": false
    },
@@ -1125,11 +1125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:51:47.265347Z",
-     "start_time": "2023-10-06T15:50:59.971650Z"
+     "end_time": "2023-10-08T03:04:42.343454Z",
+     "start_time": "2023-10-08T03:03:57.822958Z"
     },
     "test": "full_data_train_accuracy"
    },
@@ -1152,11 +1152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:51:48.231295Z",
-     "start_time": "2023-10-06T15:51:47.267115Z"
+     "end_time": "2023-10-08T03:04:43.263685Z",
+     "start_time": "2023-10-08T03:04:42.345611Z"
     },
     "test": "full_data_validation_accuracy"
    },
@@ -1187,11 +1187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:51:48.287820Z",
-     "start_time": "2023-10-06T15:51:48.233151Z"
+     "end_time": "2023-10-08T03:04:43.312490Z",
+     "start_time": "2023-10-08T03:04:43.264995Z"
     }
    },
    "outputs": [
@@ -1243,14 +1243,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:50.076599Z",
-     "start_time": "2023-10-06T15:43:50.076590Z"
+     "end_time": "2023-10-08T03:04:43.327259Z",
+     "start_time": "2023-10-08T03:04:43.313702Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before spatial batch normalization:\n",
+      "  shape:  (2, 3, 4, 5)\n",
+      "  means:  [9.33463814 8.90909116 9.11056338]\n",
+      "  stds:  [3.61447857 3.19347686 3.5168142 ]\n",
+      "After spatial batch normalization:\n",
+      "  shape:  (2, 3, 4, 5)\n",
+      "  means:  [ 6.18949336e-16  5.99520433e-16 -1.22124533e-16]\n",
+      "  stds:  [0.99999962 0.99999951 0.9999996 ]\n",
+      "After spatial batch normalization (nontrivial gamma, beta):\n",
+      "  shape:  (2, 3, 4, 5)\n",
+      "  means:  [6. 7. 8.]\n",
+      "  stds:  [2.99999885 3.99999804 4.99999798]\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "\n",
@@ -1284,14 +1303,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:50.077575Z",
-     "start_time": "2023-10-06T15:43:50.077564Z"
+     "end_time": "2023-10-08T03:04:43.351915Z",
+     "start_time": "2023-10-08T03:04:43.328444Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After spatial batch normalization (test-time):\n",
+      "  means:  [-0.08034406  0.07562881  0.05716371  0.04378383]\n",
+      "  stds:  [0.96718744 1.0299714  1.02887624 1.00585577]\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "\n",
@@ -1328,14 +1357,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:50.078510Z",
-     "start_time": "2023-10-06T15:43:50.078501Z"
+     "end_time": "2023-10-08T03:04:43.377890Z",
+     "start_time": "2023-10-08T03:04:43.353140Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  2.786648193872555e-07\n",
+      "dgamma error:  7.0974817113608705e-12\n",
+      "dbeta error:  3.275608725278405e-12\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "N, C, H, W = 2, 3, 4, 5\n",
@@ -1405,14 +1444,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:50.079532Z",
-     "start_time": "2023-10-06T15:43:50.079522Z"
+     "end_time": "2023-10-08T03:04:43.390740Z",
+     "start_time": "2023-10-08T03:04:43.379269Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before spatial group normalization:\n",
+      "  shape:  (2, 6, 4, 5)\n",
+      "  means:  [9.72505327 8.51114185 8.9147544  9.43448077]\n",
+      "  stds:  [3.67070958 3.09892597 4.27043622 3.97521327]\n",
+      "After spatial group normalization:\n",
+      "  shape:  (2, 6, 4, 5)\n",
+      "  means:  [-2.14643118e-16  5.25505565e-16  2.65528340e-16 -3.38618023e-16]\n",
+      "  stds:  [0.99999963 0.99999948 0.99999973 0.99999968]\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "\n",
@@ -1449,14 +1503,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-06T15:43:50.080104Z",
-     "start_time": "2023-10-06T15:43:50.080096Z"
+     "end_time": "2023-10-08T03:04:43.442663Z",
+     "start_time": "2023-10-08T03:04:43.393882Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx error:  7.413109384854475e-08\n",
+      "dgamma error:  9.468195772749234e-12\n",
+      "dbeta error:  3.354494437653335e-12\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "N, C, H, W = 2, 6, 4, 5\n",
@@ -1476,6 +1540,7 @@
     "db_num = eval_numerical_gradient_array(fb, beta, dout)\n",
     "\n",
     "_, cache = spatial_groupnorm_forward(x, gamma, beta, G, gn_param)\n",
+    "\n",
     "dx, dgamma, dbeta = spatial_groupnorm_backward(dout, cache)\n",
     "\n",
     "# You should expect errors of magnitudes between 1e-12 and 1e-07. \n",
@@ -1483,6 +1548,13 @@
     "print('dgamma error: ', rel_error(da_num, dgamma))\n",
     "print('dbeta error: ', rel_error(db_num, dbeta))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
