--- a/assignment2/PyTorch.ipynb
+++ b/assignment2/PyTorch.ipynb
@@ -767,7 +767,8 @@
     "ExecuteTime": {
      "end_time": "2023-10-29T14:35:55.325123Z",
      "start_time": "2023-10-29T14:35:45.564347Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
@@ -846,6 +847,7 @@
      "end_time": "2023-10-29T14:36:05.645168Z",
      "start_time": "2023-10-29T14:35:55.326960Z"
     },
+    "collapsed": true,
     "test": "barebones_accuracy"
    },
    "outputs": [
@@ -1225,7 +1227,8 @@
     "ExecuteTime": {
      "end_time": "2023-10-29T14:36:15.724938Z",
      "start_time": "2023-10-29T14:36:05.687755Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1294,6 +1297,7 @@
      "end_time": "2023-10-29T14:36:25.772374Z",
      "start_time": "2023-10-29T14:36:15.726435Z"
     },
+    "collapsed": true,
     "test": "module_accuracy"
    },
    "outputs": [
@@ -1386,7 +1390,8 @@
     "ExecuteTime": {
      "end_time": "2023-10-29T14:36:35.686769Z",
      "start_time": "2023-10-29T14:36:25.774358Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [
     {
@@ -1480,6 +1485,7 @@
      "end_time": "2023-10-29T14:36:45.860072Z",
      "start_time": "2023-10-29T14:36:35.688631Z"
     },
+    "collapsed": true,
     "test": "sequential_accuracy"
    },
    "outputs": [
@@ -1679,6 +1685,7 @@
      "end_time": "2023-10-29T14:38:36.071388Z",
      "start_time": "2023-10-29T14:36:45.959318Z"
     },
+    "collapsed": true,
     "test": "open_ended_accuracy"
    },
    "outputs": [
